Edicion de citas

--- a/src/app/admin/privateConsultations/consult/consult.component.html
+++ b/src/app/admin/privateConsultations/consult/consult.component.html
@@ -7,8 +7,7 @@
                         <h4 class="card-title">Opciones</h4>
                     </div>
                     <div class="card-body">
-                        <a [routerLink]="['/admin', 'edicion-mascota']" class="btn btn-warning btn-block">Agregar
-                            nuevo</a>
+                        <a [routerLink]="['/admin', 'edicion-cita', 'U-' + consult.idInvited]" class="btn btn-warning btn-block">Agregar cita</a>
                     </div>
                 </div>
             </div>
