--- a/src/app/admin/profile/profile/profile.component.html
+++ b/src/app/admin/profile/profile/profile.component.html
@@ -86,10 +86,16 @@
                                         </mat-form-field>
                                     </div>
                                     <div class="col-md-6">
-                                        <mat-form-field class="example-full-width">
-                                            <input matInput formControlName="AsociationType"
-                                                placeholder="Tipo de asociacion" type="text">
-                                        </mat-form-field>
+                                        <div class="form-label-group">
+                                            <mat-form-field *ngIf="RoleEnum">
+                                              <mat-label>Tipo de empresa</mat-label>
+                                              <mat-select formControlName="AsociationType">
+                                                <mat-option  *ngFor="let item of RoleEnum | enumToArray" [value]="item">
+                                                  {{ item }}
+                                                </mat-option>
+                                              </mat-select>
+                                            </mat-form-field>
+                                          </div>
                                     </div>
                                 </div>
                                 <button mat-raised-button type="submit" (click)="saveCompany()"
