se realizan algunas correciones

--- a/src/app/admin/admin-components/pet-card/pet-card.component.scss
+++ b/src/app/admin/admin-components/pet-card/pet-card.component.scss
@@ -10,8 +10,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 15px;  
+    // img {
+    //     height: 15vw;
+    // }
 }
 
 .mat-card-title {
     color: black;
 }
+
