--- a/src/app/admin/pets/pets/pets.component.html
+++ b/src/app/admin/pets/pets/pets.component.html
@@ -8,7 +8,7 @@
                     </div>
                     <div class="card-body">
                         <a [routerLink]="['/admin', 'edicion-mascota']" class="btn btn-warning btn-block">Agregar
-                            nuevo</a>
+                            nueva mascota</a>
                     </div>
                 </div>
             </div>
