--- a/src/app/landing/adoption-list/adoption-list.component.html
+++ b/src/app/landing/adoption-list/adoption-list.component.html
@@ -1,6 +1,25 @@
-<p>adoption-list works!</p>
-<app-pet-card></app-pet-card>
-<div *ngFor="let pet of PetsInAdoption">
-    {{pet.Name}}
-    <button (click)="GoToAdoption(pet.id)">formulario de adopcion</button>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 center">
+            <h1 class="title">Mascotas en adopción</h1>
+        </div>
+        <div class="col-sm-12">
+            <div class="contain">
+                <div class="row">
+                    <div *ngFor="let pet of PetsInAdoption; index as i" class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="cart">
+                            <img [src]="pet.Images[0]" alt="">
+                            <div class="body-cart">
+                                <h5><strong>Nombre</strong> {{pet.Name}}</h5>
+                                <h5><strong>Edad</strong> {{pet.Age}}</h5>
+                                <h5><strong>Genero</strong> {{pet.Gender}}</h5>
+                                <h5><strong>Raza</strong> {{pet.Race}}</h5>
+                                <h5><strong>Animal</strong> {{pet.AnimalType}}</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
