--- a/src/app/landing/Alert/alert-list/alert-list.component.html
+++ b/src/app/landing/Alert/alert-list/alert-list.component.html
@@ -6,7 +6,7 @@
         <div class="col-sm-12">
             <div class="contain">
                 <div class="row">
-                    <div *ngFor="let alert of alerts; index as i" class="col-sm-12">
+                    <div *ngFor="let alert of alerts; index as i" (click)="GoTo(alert.id)" class="col-sm-12">
                         <div class="text-post">
                             <h3>{{alert.Title}} </h3>
                             <span>{{alert.Date | date:'shortDate'}}</span>
