--- a/src/app/landing/Article/article-list/article-list.component.scss
+++ b/src/app/landing/Article/article-list/article-list.component.scss
@@ -10,6 +10,10 @@
     letter-spacing: 10px;
 }
 
+.text-post {
+    cursor: pointer;
+}
+
 // @media (max-width: 768px) {
 //     .cart {
 //         margin: 20px 0;
