--- a/src/app/landing/Consult/consult-list/consult-list.component.html
+++ b/src/app/landing/Consult/consult-list/consult-list.component.html
@@ -6,7 +6,7 @@
         <div class="col-sm-12">
             <div class="contain">
                 <div class="row">
-                    <div *ngFor="let consult of consults; index as i" class="col-sm-12">
+                    <div *ngFor="let consult of consults; index as i" (click)="GoTo(consult.id)" class="col-sm-12">
                         <div class="text-post">
                             <h3>{{consult.Title}} </h3>
                             <span>{{consult.Date | date:'shortDate'}}</span>
