--- a/src/app/landing/Pet/adoption-list/adoption-list.component.scss
+++ b/src/app/landing/Pet/adoption-list/adoption-list.component.scss
@@ -6,6 +6,7 @@
     -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
     transition: 0.5s;
+    cursor: pointer;
     img {
         width: 300px;
         height: 200px;
