--- a/src/app/landing/Alert/alert-view/alert-view.component.html
+++ b/src/app/landing/Alert/alert-view/alert-view.component.html
@@ -1,1 +1,32 @@
-<p>alert-view works!</p>
+<div *ngIf="alert">
+    <div class="container cont">
+        <div class="row">
+            <div class="col-sm-12 center">
+                <h1 class="title">{{alert.Title}}</h1>
+            </div>
+            <div class="col-sm-12">
+                <div class="contain">
+                    <div class="row">
+                        <div [innerHTML]="alert.Content"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <hr>
+                <h2>Comentarios</h2>
+                <div class="row">
+                    <div *ngFor="let comment of alert.Comments" class="col-sm-12">
+                        <p>{{comment.Content}}</p>
+                        <p>{{comment.Date | date:'shortDate'}}</p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <h2>Deja un comentario</h2>
+                <textarea  [formControl]="commentForm" class="form-control" matInput placeholder="Escribir un comentario" rows="5"></textarea>
+                <button (click)="leftComment()" type="button" mat-raised-button class="btn btn-info">Enviar</button>
+            </div>
+        </div>
+    </div>
+</div>
