--- a/src/app/landing/Company/company-profile/company-profile.component.html
+++ b/src/app/landing/Company/company-profile/company-profile.component.html
@@ -1,4 +1,30 @@
 <div *ngIf="company">
-    <a (click)="contactToCopmany()">quieres realizar una consulta con esta empresa? {{company.Name}}</a>
-    <textarea [formControl]="Message" name="" id="" cols="30" rows="10"></textarea>
+    <div class="container cont">
+        <div class="row">
+            <div class="col-sm-12 center">
+                <h1 class="title">{{company.Name}}</h1>
+                <p >Desde: {{company.DateIgnauration | date:'shortDate'}}</p>
+                <img [src]="company.Logo" alt="">
+            </div>
+            <div class="col-sm-12">
+                <div class="contain">
+                    <div class="row">
+                        <p>{{company.Description}}</p>
+                        <br>
+                        <h5>tipo {{company.AsociationType}}</h5>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="col-sm-12">
+                <div class="contain">
+                    <div class="row">
+                        <p>¿quieres realizar una consulta con esta empresa?</p>
+                        <textarea  [formControl]="Message" class="form-control" matInput placeholder="Escribir un comentario" rows="5"></textarea>
+                        <button (click)="contactToCopmany()" type="button" mat-raised-button class="btn btn-info">Enviar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
